@@ -1,23 +1,8 @@
 /*
- * Copyright (c) 1997-2001, Index Data.
+ * Copyright (c) 1997-2003, Index Data.
  * See the file LICENSE for details.
  *
- * $Log: nmemsdup.c,v $
- * Revision 1.5  2001-03-25 21:55:13  adam
- * Added odr_intdup. Ztest server returns TaskPackage for ItemUpdate.
- *
- * Revision 1.4  2000/02/29 13:44:55  adam
- * Check for config.h (currently not generated).
- *
- * Revision 1.3  1999/11/30 13:47:12  adam
- * Improved installation. Moved header files to include/yaz.
- *
- * Revision 1.2  1998/02/11 11:53:36  adam
- * Changed code so that it compiles as C++.
- *
- * Revision 1.1  1997/09/17 12:10:42  adam
- * YAZ version 1.4.
- *
+ * $Id: nmemsdup.c,v 1.6 2003-03-18 13:34:37 adam Exp $
  */
 #if HAVE_CONFIG_H
 #include <config.h>
@@ -30,6 +15,14 @@ char *nmem_strdup (NMEM mem, const char *src)
 {
     char *dst = (char *)nmem_malloc (mem, strlen(src)+1);
     strcpy (dst, src);
+    return dst;
+}
+
+char *nmem_strdupn (NMEM mem, const char *src, size_t n)
+{
+    char *dst = (char *)nmem_malloc (mem, n+1);
+    memcpy (dst, src, n);
+    dst[n] = '\0';
     return dst;
 }
 
